# billy-b-assistant

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.md  README.md  README_WYOMING.md  WYOMING_TROUBLESHOOTING.md  billy_wyoming_config.py  billy_wyoming_event_handler.py  billy_wyoming_main.py  debug_wyoming.py  install_wyoming.sh  install_wyoming_alternative.sh  install_wyoming_fixed.sh  install_wyoming_local.sh  install_wyoming_minimal.sh  install_wyoming_minimal_fixed.sh  install_wyoming_simple.sh  main.py  persona.ini.example  pyproject.toml  requirements.txt  requirements_wyoming.txt  requirements_wyoming_fixed.txt  setup.sh  start_billy_wyoming.sh  test_billy_wyoming.py  versions.ini.example
billy-b-assistant/: .env.example  main.py  persona.ini.example  requirements.txt  versions.ini
billy-b-assistant/core/: audio.py  button.py  config.py  ha.py  mic.py  movements.py  mqtt.py  personality.py  session.py
billy-b-assistant/setup/: wifi_check.sh  wifi_setup.py
billy-b-assistant/sounds/: generate_clips.py
billy-b-assistant/webconfig/: package-lock.json  server.py  tailwind.config.js
core/: audio.py  button.py  config.py  hybrid_say.py  hybrid_session.py  local_llm.py  local_session.py  local_stt.py  local_tts.py  mic.py  movements.py  mqtt.py  personality.py  say.py  session.py  wakeup.py
docs/: BUILDME.md  DEPLOYMENT_OPTIONS.md  LOCAL_MODELS_IMPLEMENTATION.md  LOCAL_MODELS_MIGRATION.md  PYTHON_COMPATIBILITY.md
setup/: wifi_check.sh  wifi_setup.py
test/: replay.py
webconfig/: package.json  server.py
(+38 files in other folders)
